Tweaks for Fall 2022
Minor tweaks for Fall 2022 offering.

--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -380,6 +380,8 @@
    "source": [
     "### Strings\n",
     "\n",
+    "A *string* is a sequence of characters.  Recall that a *sequence* is a \"positionally ordered collection of other objects\" -- in this case, those objects are characters.\n",
+    "\n",
     "Common string operations - https://docs.python.org/3.3/library/string.html"
    ]
   },
@@ -392,7 +394,17 @@
     "# Create a string object, a variable (s), and a reference from s to\n",
     "#    the string object.\n",
     "s = \"The dog is hungry.\"\n",
-    "s"
+    "s, type(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using the default print function\n",
+    "print(s)"
    ]
   },
   {
@@ -457,8 +469,8 @@
    "source": [
     "# If the intial number is blank, start at the front,\n",
     "#   if the second is blank, go to the end.\n",
-    "s[:3]\n",
-    "#s[3:]"
+    "print(s[:3])\n",
+    "print(s[3:])"
    ]
   },
   {
@@ -468,8 +480,9 @@
    "outputs": [],
    "source": [
     "# concatenation\n",
-    "s + \" So give her some food.\"\n",
+    "print(s + \" So give her some food.\")\n",
     "# note that this does not change s\n",
+    "print(s)\n",
     "# but what if I assinged the new object to s\n",
     "#s = s + \" So give her some food.\"\n",
     "#s"
@@ -481,7 +494,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# but what if I assinged the new object to s\n",
+    "s = s + \" So give her some food.\"\n",
+    "print(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# find substring\n",
+    "# Back to the original\n",
+    "s = \"The dog is hungry.\"\n",
     "s1 = s + \" So give her some food.\"\n",
     "s1.find('gry')"
    ]
@@ -674,7 +700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
