--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -652,7 +652,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Slide 16 of 03 Introduction to Python.pptx\n",
+    "# Slide 19 of 03 Introduction to Python.pptx\n",
     "#\n",
     "# creating a list to define a person\n",
     "person = [\"Tom Howard\", 54, 6.0]\n",
@@ -707,6 +707,17 @@
     "    print(\"{:} is {:} years old\".format(p[0], p[1]))\n",
     "# In this statement, each p represents a \"record\" in the dataset and\n",
     "# each element of p (it is a list) is an \"attribute\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Or using f-strings\n",
+    "for p in people:\n",
+    "    print(f\"{p[0]} is {p[1]} years old\")"
    ]
   },
   {
@@ -1164,7 +1175,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
