Tweaks for Fall 2022
Minor tweaks for Fall 2022.

--- a/notebooks/1.0 Intro to Python.ipynb
+++ b/notebooks/1.0 Intro to Python.ipynb
@@ -482,10 +482,7 @@
     "# concatenation\n",
     "print(s + \" So give her some food.\")\n",
     "# note that this does not change s\n",
-    "print(s)\n",
-    "# but what if I assinged the new object to s\n",
-    "#s = s + \" So give her some food.\"\n",
-    "#s"
+    "print(s)"
    ]
   },
   {
@@ -496,7 +493,8 @@
    "source": [
     "# but what if I assinged the new object to s\n",
     "s = s + \" So give her some food.\"\n",
-    "print(s)"
+    "print(s)\n",
+    "# Why?"
    ]
   },
   {
@@ -528,10 +526,10 @@
    "outputs": [],
    "source": [
     "# replace\n",
-    "s1.replace('dog', 'cat')\n",
-    "# note that this creates a new object -- it doesn't change s1\n",
-    "#s1\n",
-    "# But if I did s1 = s1.replace('dog', 'cat'), what would happen?"
+    "print(s1.replace('dog', 'cat'))\n",
+    "# note that this creates a new object -- it doesn't change s1 \n",
+    "print(s1)\n",
+    "# But if I did s1 = s1.replace('dog', 'cat'), what would happen?  Why?"
    ]
   },
   {
@@ -561,6 +559,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tokenize the string -- separate the string into \"tokens\" - in this case, a token\n",
+    "# is a word.\n",
     "# the easiest way to understand this is to go inside-out and left-to-right\n",
     "(s + \" So give her some food.\").replace('.','').split()\n",
     "# Python-eque code makes significant use of chaining -- can be confusing to beginners."
@@ -570,7 +570,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The format() method for string objects\n",
+    "**Dealing with strings is a very important part of Python programming - especially in data science-related applications.**\n",
+    "\n",
+    "Be sure to have a look at Common string operations - https://docs.python.org/3.3/library/string.html and experiment/practice."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Formatting strings: the format() method and f-strings\n",
     "\n",
     "https://docs.python.org/3.1/library/string.html#format-specification-mini-language"
    ]
@@ -644,6 +653,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note that the preceeding are just *examples* -- see the docs for all the details (https://docs.python.org/3.1/library/string.html#format-specification-mini-language).  In most of your **homework assignments** we will ask you to use \"user-friendly\" formats for model outputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Formatted String Literals -- f-strings\n",
     "\n",
     "Introduced in Python 3.6 - https://peps.python.org/pep-0498/.  The behavior is the similar to the format() function and they can be easier to read and create."
@@ -656,10 +672,11 @@
    "outputs": [],
    "source": [
     "# f-strings - Formatted string literals\n",
-    "f\"{c}'s salary is ${salary:,.2f} per year.\"\n",
+    "print(f\"{c}'s salary is ${salary:,.2f} per year.\")\n",
     "\n",
     "# Compare this version to the format() version\n",
-    "# \"{:}'s salary is ${:} per year.\".format(c, salary)\n",
+    "print(\"{:}'s salary is ${:,.2f} per year.\".format(c, salary))\n",
+    "#\n",
     "# You decide which is easier for you, but it often important to have\n",
     "# user-friently formatting :-)."
    ]
@@ -671,7 +688,7 @@
    "outputs": [],
    "source": [
     "# Make sure that the math module has been imported or uncomment the next line\n",
-    "#import math\n",
+    "import math\n",
     "str = f\"Long value of pi: {math.pi}; and a shorter value of pi: {math.pi:.3f}\"\n",
     "str"
    ]
