--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -77,6 +77,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# starts at the end and moves backward\n",
+    "l1[-3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Lists have \"iterators\" that allow you to easily iterate though the list elements\n",
     "# without using explicit indices\n",
     "for item in l1:\n",
@@ -89,11 +99,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# as compared to the traditional indexing method ...\n",
+    "# as compared to the traditional indexing method (note that we dicuss range() in detail below, so be patient) ...\n",
     "for j in range(len(l1)):\n",
     "    print(l1[j])\n",
     "# Note here that we did not explicitly give the list length (i.e., range(10)), but\n",
     "# used the len() function to do that implicitly."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and we have a j variable with the traditional version\n",
+    "j\n",
+    "# How many elements in l1?  j + 1 -- remember, sequences are 0-based."
    ]
   },
   {
@@ -164,6 +185,42 @@
     "# to view the nested list (list of lists) in matrix form:\n",
     "for r in l2:\n",
     "    print(r)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and standard sequence indexing applies.  Suppose that I want the \"middle\" element\n",
+    "# from our matrix\n",
+    "l2[1][1]\n",
+    "# It's the second element of the second list (sequences are 0-based)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# and if I want the last element in the first row:\n",
+    "l2[0][2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that this concept generalizes to any number of \"dimenions\":\n",
+    "* list - 1-d\n",
+    "* list of lists - 2-d\n",
+    "* list of lists of lists - 3d\n",
+    "\n",
+    "...\n",
+    "\n",
+    "For this class, we are primarily interested in \"rectangular\" data sets, so the list of list structure is what we will use the most.\n"
    ]
   },
   {
@@ -341,6 +398,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Want to know more (and the answer should be **YES**), try a google search for \"python list functions\" - lots of good descriptions/tutorials/examples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Range Objects and Lists\n",
     "\n",
     "A nice (short) discussion on Python 3 iterators - https://stackoverflow.com/questions/22147757/iterators-in-python-3"
@@ -365,7 +429,8 @@
    "outputs": [],
    "source": [
     "r = range(7, 24, 2)\n",
-    "r, list(r)"
+    "r, list(r)\n",
+    "# 7 is the start, 24 is the stop, and 2 is the step (sometimes called the \"stride\")"
    ]
   },
   {
@@ -387,8 +452,20 @@
    "source": [
     "str = \"The dog ate my homework.\"\n",
     "for j in range(len(str)):\n",
-    "    print (str[j])\n",
-    "# What exactly does the expression range(len(str)) return?"
+    "    print(str[j])\n",
+    "# what does the expression range(len(str)) return?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To see, expand\n",
+    "print(str)\n",
+    "print(len(str))\n",
+    "print(range(len(str)))"
    ]
   },
   {
@@ -399,7 +476,8 @@
    "source": [
     "# Note that since strings are sequences, they also have iterators\n",
     "for char in str:\n",
-    "    print(char)"
+    "    print(char)\n",
+    "# Unless you need the index (j) for some reason, this method is generally preferable."
    ]
   },
   {
@@ -408,6 +486,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Same concepts with general lists\n",
     "l = [\"one\", 2, \"three\", 4, 'Five']\n",
     "for j in range(len(l)):\n",
     "    print(l[j])"
@@ -485,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# extract the third column using a standard programatic approach:\n",
+    "# \"extract\" (i.e, create a new list) the third column using a standard programatic approach:\n",
     "c = []\n",
     "for i in [0, 1, 2]:\n",
     "    c.append(m[i][2])\n",
@@ -535,7 +614,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or\n",
     "c = [m[i][2] for i in range(len(m))]\n",
     "c"
    ]
@@ -568,7 +646,18 @@
    "source": [
     "# even elements of the second column\n",
     "[r[1] for r in m if r[1] % 2 == 0]\n",
-    "# added an \"if condition\" to the comprehension"
+    "# How does this work?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First what's this % thing and how is it incorporated into the \"if\" statement?\n",
+    "for j in range(10):\n",
+    "    print(j, j % 2, j % 2 == 0)"
    ]
   },
   {
@@ -637,6 +726,13 @@
     "#p = len(sevens)/obs\n",
     "\n",
     "\"Estimate or prob. based on {:,d} samples: {:.4f}\".format(obs,p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Want to know more?  Do a google search on \"python list comprehension\""
    ]
   },
   {
