--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -524,7 +524,11 @@
     "    ]\n",
     "# Now, m is a list of 3 lists\n",
     "# Equivalent to m = [[1, 2, 3], [4,5,6],[7,8,9]] (A list of three three-element lists)\n",
-    "m"
+    "m\n",
+    "#\n",
+    "# Important to note that this is NOT a \"matrix object\" in Python.  This is a list of lists of numbers that \n",
+    "# we INTERPRET as a matrix.  Numpy (a Python package that we will cover soon does have a matrix object).\n",
+    "#"
    ]
   },
   {
@@ -564,11 +568,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# \"extract\" (i.e, create a new list) the third column using a standard programatic approach:\n",
+    "# \"extract\" (here we are creating a new list) the third column using a standard programatic approach:\n",
     "c = []\n",
     "for i in [0, 1, 2]:\n",
     "    c.append(m[i][2])\n",
-    "c"
+    "c\n",
+    "# We had to create a new object here since the \"column\" doen't exist as an object on its own (unlike\n",
+    "# the row, which is one of the lists in our list of lists).  Remember, the \"row\" and \"column\" notation\n",
+    "# is only in our minds -- not in the Python object itself."
    ]
   },
   {
@@ -590,7 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# or, y using the list iterator rather than an index:\n",
+    "# or, by using the list iterator rather than an index:\n",
     "c = []\n",
     "for r in m:\n",
     "    c.append(r[2])\n",
@@ -614,6 +621,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# or, using a different comprehension\n",
     "c = [m[i][2] for i in range(len(m))]\n",
     "c"
    ]
@@ -655,7 +663,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First what's this % thing and how is it incorporated into the \"if\" statement?\n",
+    "# First what's this \"%\" thing and how is it incorporated into the \"if\" statement?\n",
+    "# % is the modulus operator and j % 2 gives the integer remainder after dividing \n",
+    "# j by 2.\n",
     "for j in range(10):\n",
     "    print(j, j % 2, j % 2 == 0)"
    ]
@@ -699,7 +709,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Or, using Numpy (which is vectorized)\n",
+    "# Or, using Numpy (which is vectorized and includes an array object)\n",
     "import numpy as np\n",
     "rolls = [np.random.randint(1, 7, 2) for i in range(100)]\n",
     "rolls\n",
@@ -719,13 +729,26 @@
     "import numpy as np\n",
     "obs = 50000\n",
     "p = len([r for r in [np.random.randint(1, 7, 2) for i in range(obs)] if sum(r) == 7])/obs\n",
-    "#\n",
-    "# Or, if you want to see it step-by-step - remember, think inside-to-outside, left-to-right.\n",
-    "#rolls = [np.random.randint(1, 7, 2) for i in range(obs)]\n",
-    "#sevens = [r for r in rolls if sum(r) == 7]\n",
-    "#p = len(sevens)/obs\n",
     "\n",
-    "\"Estimate or prob. based on {:,d} samples: {:.4f}\".format(obs,p)"
+    "print(f\"Estimate of prob. based on {obs:,d} samples: {p:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If you want to see the previous operation step-by-step - remember, think inside-to-outside, left-to-right.\n",
+    "# uncomment and execute step-by-step.\n",
+    "obs = 5000\n",
+    "#range(obs)\n",
+    "#rolls = [np.random.randint(1, 7, 2) for i in range(obs)]\n",
+    "#rolls\n",
+    "#sevens = [r for r in rolls if sum(r) == 7]\n",
+    "#sevens\n",
+    "#p = len(sevens)/obs\n",
+    "#p"
    ]
   },
   {
