--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -316,7 +316,8 @@
     "# append\n",
     "l = [1, 2, 3, 'cow']\n",
     "l.append(0)\n",
-    "l"
+    "l\n",
+    "# These operations would not be possible if lists were not mutable."
    ]
   },
   {
@@ -327,7 +328,8 @@
    "source": [
     "# pop\n",
     "x = l.pop()\n",
-    "l, x"
+    "l, x\n",
+    "# Ditto."
    ]
   },
   {
@@ -398,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Want to know more (and the answer should be **YES**), try a google search for \"python list functions\" - lots of good descriptions/tutorials/examples."
+    "Want to know more (and the answer should be **YES**)? Try a google search for \"python list functions\" - lots of good descriptions/tutorials/examples."
    ]
   },
   {
@@ -667,7 +669,8 @@
     "# % is the modulus operator and j % 2 gives the integer remainder after dividing \n",
     "# j by 2.\n",
     "for j in range(10):\n",
-    "    print(j, j % 2, j % 2 == 0)"
+    "    print(j, j % 2, j % 2 == 0)\n",
+    "# Make sure that you understand what precisely is being printed in this statement."
    ]
   },
   {
