Update 1.1 Python Lists and Dictionaries.ipynb
Fixed some typos.

--- a/notebooks/1.1 Python Lists and Dictionaries.ipynb
+++ b/notebooks/1.1 Python Lists and Dictionaries.ipynb
@@ -903,8 +903,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the oldest person.  Go though step-by-step, uncommenting lines to\n",
-    "# see the progress.\n",
+    "# Find the oldest person.  Go though step-by-step.\n",
     "# max age\n",
     "ages =[p[1] for p in people] \n",
     "max(ages)"
@@ -956,7 +955,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Supposed that we had defined variables to store the \"column numbers\" -- the\n",
+    "# Suppose that we had defined variables to store the \"column numbers\" -- the\n",
     "#  indices into the internal lists for the given data items\n",
     "name   = 0\n",
     "age    = 1\n",
