--- a/notebooks/1.2 Truth Values and Boolean Tests.ipynb
+++ b/notebooks/1.2 Truth Values and Boolean Tests.ipynb
@@ -57,7 +57,7 @@
     "    print('yep')\n",
     "else:\n",
     "    print('nope')\n",
-    "x, y, x and y, bool(x and y)"
+    "x, y, x and y, bool(x and y), type(x and y)"
    ]
   },
   {
@@ -284,7 +284,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -298,7 +298,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
