--- a/notebooks/1.2 Truth Values and Boolean Tests.ipynb
+++ b/notebooks/1.2 Truth Values and Boolean Tests.ipynb
@@ -39,7 +39,9 @@
     "    print('yep')\n",
     "else:\n",
     "    print('nope')\n",
-    "x, bool(x), type(x)"
+    "x, bool(x), type(x)\n",
+    "# Note that we usually think of an If Condition to be something like \"if this equals that\" or \"if\n",
+    "# this is greater than/less than that.\"  Here, \"if x\" means \"if x is true\""
    ]
   },
   {
@@ -57,7 +59,8 @@
     "    print('yep')\n",
     "else:\n",
     "    print('nope')\n",
-    "x, y, x and y, bool(x and y), type(x and y)"
+    "x, y, x and y, bool(x and y), type(x and y)\n",
+    "# again, our interpretation of the condition is \"if the expression (x and y) is true\""
    ]
   },
   {
@@ -142,6 +145,42 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x and y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x or y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x and z"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x > 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x > 4 and y == 6"
    ]
   },
@@ -169,6 +208,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x > 4 and y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "x > 4 and z"
    ]
   },
@@ -188,24 +236,6 @@
    "outputs": [],
    "source": [
     "x < 4 or z"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x and y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x or y"
    ]
   },
   {
@@ -259,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# in and assignment statement\n",
+    "# Boolean epxression in an assignment statement\n",
     "z = 3 and (x and y)\n",
     "z, x, y"
    ]
@@ -271,6 +301,16 @@
    "outputs": [],
    "source": [
     "z = 3 or (x and y)\n",
+    "z, x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "z = 3 and (x or y)\n",
     "z, x, y"
    ]
   },
@@ -298,7 +338,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
