--- a/notebooks/1.3.1 File Reading Example - Basketball Dataset.ipynb
+++ b/notebooks/1.3.1 File Reading Example - Basketball Dataset.ipynb
@@ -186,7 +186,7 @@
     "#\n",
     "# Python-esque version 1\n",
     "#\n",
-    "# Grab all the lines from the file starting with line 1, strip\n",
+    "# Grab all the lines from the file starting with line 1 (the second line -- 0-based), strip\n",
     "# the newline and tokenize\n",
     "with open(\"../Data/College Basketball Dataset.csv\") as f:\n",
     "    data2 = [line.rstrip().split(',') for line in f.readlines()[1:]]\n",
@@ -343,7 +343,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
