--- a/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
+++ b/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
@@ -28,7 +28,9 @@
    "outputs": [],
    "source": [
     "x = {2, 2, 1, 1, 5, 4, 5, 4, 1, 5}\n",
-    "x"
+    "x\n",
+    "# Similar to a dictionary in that if you assign a new value to an existing key\n",
+    "# it doesn't replicate the key, it replaces the value."
    ]
   },
   {
@@ -280,7 +282,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Files"
+    "## Files\n",
+    "\n",
+    "Reading and writing files is very important in data science applications."
    ]
   },
   {
@@ -289,11 +293,57 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Before executing this, have a look at the data file in a text editor.\n",
+    "#\n",
     "# Make sure that you uderstand the file path notation -- ../data means \"go up one level, then go to\n",
     "# the data directory from that location\" - this is a relative path.\n",
     "f = open('../data/data.txt', 'r')\n",
     "print (f, type(f))\n",
-    "f.close()"
+    "f.close()\n",
+    "# Note here that we open the file, do what we want, and then close the file.  If we\n",
+    "# want to do more later, we'll have to reopen the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Read one line from the file\n",
+    "f = open('../data/data.txt', 'r')\n",
+    "line = f.readline()\n",
+    "f.close()\n",
+    "line, type(line)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# '\\n' is the newline character that signifies the end of a line\n",
+    "# in a text file.  To remove it, use strip()\n",
+    "f = open('../data/data.txt', 'r')\n",
+    "line = f.readline().strip()\n",
+    "f.close()\n",
+    "line, type(line)\n",
+    "# Note that we have chained the readline() and strip() functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# If we want integers\n",
+    "f = open('../data/data.txt', 'r')\n",
+    "line = int(f.readline().strip())\n",
+    "f.close()\n",
+    "line, type(line)\n",
+    "# If you want floats instead, use float()"
    ]
   },
   {
@@ -370,7 +420,8 @@
     "        f.write(\"{:},\".format(vals[j]))\n",
     "    else :\n",
     "        f.write(\"{:}\".format(vals[j]))\n",
-    "f.close()\n"
+    "f.close()\n",
+    "# Be sure to have a look at the file that you just wrote."
    ]
   },
   {
@@ -446,7 +497,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -460,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
