--- a/notebooks/1.4 Date and Time Handling.ipynb
+++ b/notebooks/1.4 Date and Time Handling.ipynb
@@ -60,7 +60,7 @@
    "outputs": [],
    "source": [
     "# Creating a datetime object using date\n",
-    "d = datetime.datetime(2019, 9, 23, 15, 23, 12)\n",
+    "d = datetime.datetime(2022, 9, 8, 11, 23, 12)\n",
     "d"
    ]
   },
@@ -70,7 +70,9 @@
    "source": [
     "### Converting strings to datetime objects - strptime()\n",
     "\n",
-    "Think \"string parse\" - strptime"
+    "Think \"string parse\" - strptime \n",
+    "\n",
+    "Reading a string representation of a date from a file and then wanting to do \"date/time arithmetic\" or formatting is very common.  Strptime() is commonly used to convert the string to a datetime object."
    ]
   },
   {
@@ -172,7 +174,8 @@
     "for row in vdataset:\n",
     "    row[1] = float(row[1])\n",
     "    row[2] = float(row[2])\n",
-    "vdataset[:5]"
+    "vdataset[:5]\n",
+    "# What does the previous expression do?"
    ]
   },
   {
@@ -235,12 +238,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "rightnow + datetime.timedelta(days=-365)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or, in a user-friendly format\n",
+    "lastyear = rightnow + datetime.timedelta(days=-364)\n",
+    "print(\"Last year at this time was {}\".format(lastyear.strftime(\"%A %B %d, %Y %I:%M:%S %p\")))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -254,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
