--- a/notebooks/1.2 Truth Values and Boolean Tests.ipynb
+++ b/notebooks/1.2 Truth Values and Boolean Tests.ipynb
@@ -73,7 +73,17 @@
     "while x > 0:\n",
     "    print(x, bool(x))\n",
     "    x = x - 2\n",
-    "print(\"Out of loop. x = {:}; bool(x) = {:}\".format(x, bool(x)))"
+    "print(\"Out of loop. x = {:}; bool(x) = {:}\".format(x, bool(x)))\n",
+    "# Note that here, we could have used \"x:\" instead of \"x > 0\" as the while condition.  \n",
+    "# However, you should take great care with while loops like this.  \n",
+    "# For example, what would happen if the intial value of x were 9 and you used \"while x:\"?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Today's trivia question: *\"What company's corporate headquarters used to be at the street address '1 Infinite Loop'\"*?"
    ]
   },
   {
@@ -338,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
