--- a/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
+++ b/notebooks/1.3 Sets, Tuples, Functions, Files.ipynb
@@ -196,7 +196,7 @@
     "#  Define a couple of functions -- just for kicks (demonstration, that is) -- would use NumPy for real stuff. \n",
     "#\n",
     "# mean() - compute the sample mean.\n",
-    "#     Parameters:\n",
+    "#     Arguements:\n",
     "#         N a list of numbers\n",
     "#\n",
     "def mean( N ):\n",
@@ -214,7 +214,7 @@
     "\n",
     "#\n",
     "# std_dev() - compute the sample standard deviation.\n",
-    "#     Parameters:\n",
+    "#     Arguements:\n",
     "#         N a list of numbers\n",
     "#\n",
     "def std_dev( N ):\n",
@@ -511,7 +511,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
