Update 2.0 Introduction to NumPy.ipynb
Tweaks for Fall '22

--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -104,6 +104,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Using a different type (64-bit integers rather than 32-bit integers)\n",
+    "a = np.array([1.5, 0.7, 22.4], dtype=\"int64\")\n",
+    "show(a, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# The second element (zero-based, so it's index 1)\n",
     "a[1]"
    ]
@@ -115,7 +126,7 @@
    "outputs": [],
    "source": [
     "# Multi-dimensional array.  Note that NumPy arrays are homogenous -- all\n",
-    "#   elements are the same data type (dtype) -- integers in this case\n",
+    "#   elements are the same data type (dtype) -- 32-bit integers in this case\n",
     "b = np.array(\n",
     "    [ [1,  2,  3,  4,   5]\n",
     "     ,[6,  7,  8,  9,  10]\n",
@@ -132,7 +143,9 @@
     "# the (i, j)the element\n",
     "i = 2\n",
     "j = 3\n",
-    "b[i, j]"
+    "b[i, j]\n",
+    "# Also note that the array notation is different from a\n",
+    "# list-of-lists notation -- b[i, j] vs b[i][j]"
    ]
   },
   {
@@ -195,10 +208,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.arange?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linspace?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.linspace(0, 1, 11)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Back to arange()\n",
     "# Create the same array, but used floats and then reshape it to a 3x5 matrix (a \n",
     "#   2-dimensional array, technically)\n",
     "a = np.arange(15, dtype=float).reshape(3,5)\n",
     "show(a, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.reshape?"
    ]
   },
   {
@@ -314,6 +364,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "x3.flatten?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# NumPy arrays are mutable.\n",
     "x2[0,0] = 12\n",
     "x2"
@@ -336,7 +395,7 @@
    "source": [
     "### More on reshaping and np.newaxis\n",
     "\n",
-    "The concept of \"axes\" is one of the more confusing aspects of NumPy.  Axes are used throughout the NumPy-based ecosystem -- notebly for us Pandas and Matplotlib, so you need to know them.  Lots and lots of online material.  I found this one particularly easy to understand - https://www.sharpsightlabs.com/blog/numpy-axes-explained/"
+    "The concept of \"axes\" is one of the more confusing aspects of NumPy.  Axes are used throughout the NumPy-based ecosystem -- notebly for us Pandas and Matplotlib, so you need to know them.  Lots and lots of online material.  I found this one particularly easy to understand - https://www.sharpsightlabs.com/blog/numpy-axes-explained/.  This one is a little more explicit (and has fewer ads :-)) - https://stackoverflow.com/questions/29241056/how-do-i-use-np-newaxis"
    ]
   },
   {
@@ -395,16 +454,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x[np.newaxis, :]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x[:,np.newaxis]"
+    "z[1]"
    ]
   },
   {
@@ -425,6 +475,39 @@
    "source": [
     "a = np.arange(81).reshape((3,3,3,3))\n",
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.newaxis\n",
+    "# Recall x\n",
+    "show(x,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add a new axis and show the result\n",
+    "show(x[np.newaxis, :], 1)\n",
+    "# This is the same result as x.reshape((1, 3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compare to this version\n",
+    "show(x[:, np.newaxis],1)\n",
+    "# this is the same result as x.reshape((3, 1)) from above."
    ]
   },
   {
@@ -820,7 +903,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -834,7 +917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
