Update 2.0 Introduction to NumPy.ipynb
Added some additional materials.

--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -95,7 +95,9 @@
    "source": [
     "# Create a NumPy array from a list and specify the data type\n",
     "a = np.array([1.5, 0.7, 22.4], dtype=\"int32\")\n",
-    "show(a, 1)"
+    "show(a, 1)\n",
+    "# Note here that we specified an integer type, but initialized with floats.\n",
+    "# Since we specified the type, all of the elements were convereted."
    ]
   },
   {
@@ -104,8 +106,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using a different type (64-bit integers rather than 32-bit integers)\n",
-    "a = np.array([1.5, 0.7, 22.4], dtype=\"int64\")\n",
+    "# If you want to \"round\", try numpy.rint() in conjunction with astype()\n",
+    "np.rint(a).astype('int32')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Using a different type (32-bit floats rather than 64-bit floats - the default)\n",
+    "a = np.array([1.5, 0.7, 22.4], dtype=\"float32\")\n",
     "show(a, 1)"
    ]
   },
@@ -155,7 +167,7 @@
    "outputs": [],
    "source": [
     "# Note that if one elements is a float, all will be upcast since\n",
-    "# NumPy arrays are homogeneous\n",
+    "# NumPy arrays are homogeneous (unless you explicitly specify dtype).\n",
     "b = np.array(\n",
     "    [ [1.0,  2,  3,  4,   5]\n",
     "     ,[6,  7,  8,  9,  10]\n",
@@ -917,7 +929,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
