Update 2.0 Introduction to NumPy.ipynb
Tweaks for Fall '22

--- a/notebooks/2.0 Introduction to NumPy.ipynb
+++ b/notebooks/2.0 Introduction to NumPy.ipynb
@@ -579,6 +579,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Every other row\n",
+    "x2[::2,:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Every other row and every other column (starting with column 1)\n",
+    "x2[::2,1::2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# note that slices are (by default) views of the array, not copies.\n",
     "x = x2[:2, :3]\n",
     "x, x2"
@@ -929,7 +949,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
