--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -975,7 +975,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## See Data Indexing and Selection Examples notebook for more examples of indexing and data selection."
+    "## See 3.0.2 Data Indexing and Selection Examples notebook for more examples of indexing and data selection."
    ]
   },
   {
@@ -1045,7 +1045,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1059,7 +1059,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
