Updates for Fall '22
Updates for Fall '22

--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -363,7 +363,9 @@
    "outputs": [],
    "source": [
     "# Or in a user-friendly display\n",
-    "states"
+    "states\n",
+    "# Note that the user-friendly dispalay is created by the object\n",
+    "# itself -- we did not do any manual formatting."
    ]
   },
   {
@@ -1059,7 +1061,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
