--- a/notebooks/3.0.1 Sample Datasets.ipynb
+++ b/notebooks/3.0.1 Sample Datasets.ipynb
@@ -65,8 +65,9 @@
    "outputs": [],
    "source": [
     "# Grab a data set using the key and show the first few rows\n",
-    "fkey = \"ervs\"\n",
+    "fkey = \"airports\"\n",
     "df = pd.read_csv(\"../data/\"+fnames[fkey])\n",
+    "# Pay attention to what's going on with the relative path and file name dictionary.\n",
     "show(df)\n",
     "df.head()"
    ]
@@ -105,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
