--- a/notebooks/3.0.1 Sample Datasets.ipynb
+++ b/notebooks/3.0.1 Sample Datasets.ipynb
@@ -87,6 +87,20 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# If you want to use the first col (index 0) as the row index\n",
+    "fkey = \"airports\"\n",
+    "df = pd.read_csv(\"../data/\"+fnames[fkey], index_col = 0)\n",
+    "# Pay attention to what's going on with the relative path and file name dictionary.\n",
+    "show(df)\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
