--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -654,7 +654,7 @@
    "outputs": [],
    "source": [
     "# Implicit indexing when slicing - now we get the second and third \n",
-    "# elements.\n",
+    "# elements - exactly what we would expect with Python array slicing\n",
     "data[1:3]"
    ]
   },
@@ -662,7 +662,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This can cause confusion -- when is explicit indexing used and when is implicit indexing used ... Hence, loc and iloc."
+    "This can cause confusion -- **when is explicit indexing used and when is implicit indexing used?** ... Hence, loc and iloc."
    ]
   },
   {
@@ -867,8 +867,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Oops -- not using numerical index!\n",
-    "data.loc[1:3]"
+    "# Oops \n",
+    "data.loc[1:3]\n",
+    "# Why does this generate an error? -- not using numerical index!"
    ]
   },
   {
@@ -977,7 +978,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## See 3.0.2 Data Indexing and Selection Examples notebook for more examples of indexing and data selection."
+    "## See 3.0.2 Data Indexing and Selection Examples notebook for more examples of indexing and data selection (and Handling Missing Data)."
    ]
   },
   {
@@ -1038,6 +1039,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### More examples of handling missing values in the 3.0.2 notebook referenced above."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1061,7 +1069,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
