--- a/notebooks/3.0.2 Data Indexing and Selection Examples.ipynb
+++ b/notebooks/3.0.2 Data Indexing and Selection Examples.ipynb
@@ -62,6 +62,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df1.head(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Extracting a single column (as a Series)\n",
     "# Month - Either syntax works since the column name is alpha and is not a keyword.\n",
     "df1.Month\n",
@@ -184,7 +193,7 @@
    "source": [
     "# What aobut the JobsAdded for the 12 month period after the month \n",
     "# with the maximum unemployment rate\n",
-    "# From the previous query, I knwo that max unemployment occured at loc 21\n",
+    "# From the previous query, I know that max unemployment occured at loc 21\n",
     "df1[['Month', 'JobsAdded', 'UnemploymentRate']].loc[22:33]"
    ]
   },
@@ -297,7 +306,8 @@
     "# NumPy functions do not handle NA and NaN value \"well.\"\n",
     "x = np.array(df2.GDP)\n",
     "np.mean(x)\n",
-    "# Why the quotes on \"well\"?"
+    "# Why the quotes on \"well\"?  It's not technically incorrect,\n",
+    "# but it's generally not what we want (unless we do)."
    ]
   },
   {
@@ -453,7 +463,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
