--- a/notebooks/3.0.1 Sample Datasets.ipynb
+++ b/notebooks/3.0.1 Sample Datasets.ipynb
@@ -101,6 +101,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "df.loc[0:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
