--- a/notebooks/3.0 Introduction to Pandas.ipynb
+++ b/notebooks/3.0 Introduction to Pandas.ipynb
@@ -742,6 +742,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# but, you can't mix - If you use explicit, you have to use\n",
+    "# the index values.\n",
+    "data1.loc[1:3]\n",
+    "# Make sure that you understand why data.loc[1:3] works (see above), but this one fails"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Yes, you should experiment further with these concepts using the Sample Datasets notebook! "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -785,7 +804,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# works in cases where column names are character-based and\n",
+    "# THis shortcut works in cases where column names are character-based and\n",
     "# are not reserve works\n",
     "data.area"
    ]
@@ -807,7 +826,7 @@
    "outputs": [],
    "source": [
     "# lists of columns -- note that you can specify the order and note\n",
-    "# the double brackets.\n",
+    "# the double brackets - you are using a list of columns to select columns.\n",
     "data[['pop', 'area']]"
    ]
   },
@@ -827,10 +846,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add a new series using existing series\n",
+    "# Add a new column using an expression involving existing columns.\n",
     "data['density'] = data['pop'] / data['area']\n",
     "data\n",
-    "# Note the ufunc (universal function) behavior"
+    "# Note the ufunc (universal function) behavior - Very powerful and much more\n",
+    "# efficient than any type of looping process."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**loc** and **iloc** indexing and masking -- make sure that you 1) predict what the output will be; and 2) reconcile any missed predictions."
    ]
   },
   {
@@ -839,7 +866,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# loc and iloc do element selection and slicing (rows)\n",
+    "# loc and iloc do element selection and slicing (rows) - Predict the out\n",
     "data.iloc[1,2]"
    ]
   },
@@ -891,8 +918,7 @@
    "source": [
     "# Masking\n",
     "data[data.density > 100]\n",
-    "# what does 'data.density > 100' return (it's an expression that\n",
-    "# is evaluated)?"
+    "# what does the expression 'data.density > 100' return when it's evaluated)?"
    ]
   },
   {
@@ -1069,7 +1095,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
