--- a/notebooks/3.0.2 Data Indexing and Selection Examples.ipynb
+++ b/notebooks/3.0.2 Data Indexing and Selection Examples.ipynb
@@ -62,6 +62,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Or, using the built-in display function\n",
     "df1.head(7)"
    ]
   },
@@ -109,6 +110,15 @@
     "# What month had the highest unemployment rate?\n",
     "rate = df1.UnemploymentRate.max()\n",
     "df1.loc[df1.UnemploymentRate == rate]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.UnemploymentRate == rate"
    ]
   },
   {
@@ -463,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
