Update 3.0.2 Data Indexing and Selection Examples.ipynb
Tweaks.

--- a/notebooks/3.0.2 Data Indexing and Selection Examples.ipynb
+++ b/notebooks/3.0.2 Data Indexing and Selection Examples.ipynb
@@ -400,7 +400,8 @@
    "outputs": [],
    "source": [
     "# start with df2\n",
-    "df2 = pd.read_csv(filepath + '10_us_economic_data.csv', parse_dates = ['Month'], index_col=0)"
+    "df2 = pd.read_csv(filepath + '10_us_economic_data.csv', parse_dates = ['Month'], index_col=0)\n",
+    "df2.head(6)"
    ]
   },
   {
@@ -453,6 +454,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdp.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Now just replicate for years 3, 4,and 5 .... or create a small loop that automates the process."
    ]
   }
@@ -473,7 +483,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
