Update 3.1 Concatenating, Appending, Joining DataFrames.ipynb
Added chaining versions of the merge calls.

--- a/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
@@ -328,6 +328,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Note also that there is a dataframe.merge() function also\n",
+    "x.merge(y, how=\"left\")\n",
+    "# https://stackoverflow.com/questions/62143713/difference-between-pd-merge-and-dataframe-merge\n",
+    "# pd.merge() is a wraping style function and dataframe.merge() is a chaining style function.\n",
+    "# Another interesting description:\n",
+    "# https://towardsdatascience.com/the-unreasonable-effectiveness-of-method-chaining-in-pandas-15c2109e3c69"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -353,6 +367,16 @@
    "source": [
     "# again, test with inner, left, right, outer -- in all combinations\n",
     "pd.merge(pd.merge(x, y, how=\"inner\"), z, how=\"inner\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# note the chaining version\n",
+    "x.merge(y, how=\"inner\").merge(z, how=\"inner\")"
    ]
   },
   {
@@ -445,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
