Update 3.1 Concatenating, Appending, Joining DataFrames.ipynb
More chaining examples.

--- a/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
+++ b/notebooks/3.1 Concatenating, Appending, Joining DataFrames.ipynb
@@ -439,6 +439,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or the chain version\n",
+    "x.merge(y, how=\"inner\").merge(z, how=\"inner\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
