--- a/notebooks/Homework 4 - Order List Assignment.ipynb
+++ b/notebooks/Homework 4 - Order List Assignment.ipynb
@@ -16,7 +16,9 @@
     "\n",
     "The input files all have column headers that *should* the relationship structure clear.  Make sure that you look at the files in Excel or your favorite text editor before starting work on the assignment and, if you have questions, ask! \n",
     "\n",
-    "The input files are availalbe in the data\\hw4data directory in the course GitHub repository."
+    "The input files are availalbe in the data\\hw4data directory in the course GitHub repository.\n",
+    "\n",
+    "**This assignment is due on Wednesday, October 19**"
    ]
   },
   {
@@ -141,26 +143,6 @@
    "source": [
     "# Start solution here - add and use as many cells as necessary\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0552c294-d2a9-45bc-b938-bf205b12340f",
-   "metadata": {},
-   "source": [
-    "## Question 6\n",
-    "\n",
-    "TBD - Some plots using Matplotlib.  Will have this problem finalized after Fall Break."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "833336e3-9539-4e85-83bb-f800feda06a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Start solution here - add and use as many cells as necessary\n"
-   ]
   }
  ],
  "metadata": {
@@ -179,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
