--- a/notebooks/Data Cleaning Example Using the Foreign Exchange Rate Data.ipynb
+++ b/notebooks/Data Cleaning Example Using the Foreign Exchange Rate Data.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Foreign Exchange Rate Data Cleaning\n",
+    "# Data Cleaning Exampling Using the Foreign Exchange Rate Data\n",
     "\n",
-    "Datafile: \"14_Foreign_Exchange_Rates _WithErrors.csv\"\n",
+    "Datafile: \"14_Foreign_Exchange_Rates _WithErrors.csv\" - Note that this is a version of the same dataset that we've used before except that we added some errors.\n",
     "\n",
-    "2020-10-20 - Jingwei Liu"
+    "2020-10-20 - Jingwei Liu\n",
+    "<br>2022-10-17 - Jeff Smith"
    ]
   },
   {
@@ -28,8 +29,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## At the beginning, understanding the data is very important\n",
-    "If you know the meaning of each column, the data type of each column, the range of each column(if applicable), all those can give you a great help in cleaning the data"
+    "## In the beginning, understanding the data is very important\n",
+    "If you know the meaning of each column, the expected data type of each column, the range of values for each column (if applicable), all those can give you a great help in cleaning the data"
    ]
   },
   {
@@ -56,14 +57,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can find that the first column should be index and the second column should be a date. And all other columns are numbers because they are exchange rates."
+    "We see that the first column should be an index and the second column should be a date. All other columns are numbers because they are monetary exchange rates."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Then, let's check whether all cells in the exchange rates are numbers\n",
+    "## Then, let's check whether all cells in the exchange rates are (as expected), numbers\n",
     "Generally, we should clean the data column by column rather than row by row. Let's take the column \"AUSTRALIA - AUSTRALIAN DOLLAR/US$\" as an example"
    ]
   },
@@ -91,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Based on our understanding of the data, the data type of the cell should be a number(float) rather than a string(str). In addition, according to this result, we should notice that there are cells which contain some non-number-string values(ND). Now, let's first find those non-number-strings."
+    "Based on our understanding of the data, the data type of the cell should be numeric (float) rather than string (str). In addition, according to this result, we should notice that there are cells which contain some non-number-string values (ND). Now, let's first find those non-number-strings."
    ]
   },
   {
@@ -100,7 +101,7 @@
    "source": [
     "## So, how to find the non-number-strings \n",
     "### Assume we have two strings: '123' and 'abc'. how can we distinguish them?\n",
-    "In Python, '123' can be convert to a number(float). "
+    "In Python, the string '123' can be converted to a number using the float() function. "
    ]
   },
   {
@@ -132,11 +133,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The error is useful in interactive mode, but we need something that will indicate the problem, but not fail.  One option is Excepting Handling.  You can find a good overview of this method here: https://docs.python.org/3/tutorial/errors.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Simple exception handling\n",
     "try:\n",
     "    float(str2)\n",
     "except ValueError:\n",
@@ -147,7 +156,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can see that we can use float() function to help us distinguish non-number-strings. And the \"try except\" structure is very powerful in Python. "
+    "Note that the error (called an *exeption*) was \"caught\" and we were allowed to continue processing the statement.\n",
+    "\n",
+    "Using this method, we can use float() function to help us distinguish non-number-strings without triggering an error. The \"try except\" structure is very powerful in Python (see the link above for a more detailed introduction). "
    ]
   },
   {
@@ -155,7 +166,7 @@
    "metadata": {},
    "source": [
     "## Now, let's try to locate the cells that contain non-number-strings\n",
-    "Let's define a function that can return indices of the cells contain non-number-strings"
+    "Let's define a function that returns the indices of the cells contain non-number-strings:"
    ]
   },
   {
@@ -186,8 +197,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use the above function and get the indices of non-number strings and use the indices list to filter those values out\n",
+    "# Use the above function and get the indices of non-number strings \n",
     "resultlist = CheckIfNumInCol(df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'])\n",
+    "resultlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now filter the original dataframe using the list of indices\n",
     "df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'][resultlist]"
    ]
   },
@@ -202,17 +223,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Before we move next, you should think about this question: are there perticular meanings for these non-number-strings? Are they supposed to be a number-string? These questions are important because it will affect how you deal with this non-number-strings.\n",
-    "### For this perticular data, if you open the csv file and find the rows that contain 'ND', you'll find that their date are all holidays. So, there comes 2 situations: 1. There should be no data in holidays  2. The data provider doesn't record exchange rate during holidays. You need to make a decision.\n",
-    "###  For the 89th row that contains 'ABC', this should be a number-string originally."
+    "## Before we move on, you should think about this question: Are there perticular meanings for these non-number-strings? Are they supposed to be a number-strings? These questions are important because it will affect how you deal with this non-number-strings.\n",
+    "\n",
+    "For this particular data, if you open the csv file and find the rows that contain 'ND', you'll find that the corresponding dates are all holidays. So, thee are two different potential situations: 1. There is no data for holidays, or 2. The data provider doesn't record exchange rate during holidays. You need to make a decision in order to \"fix\" the dataset.\n",
+    "\n",
+    "In addition to the ND values, the 89th row contains 'ABC'. Since we don't see any logical reason for this, we assume that it is a \"typo\" and that the value should be a number-string originally."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## After finding the non-number-strings, all left are number-strings. But how can we know that the cells that contain number-strings are correct?\n",
-    "For different data, there is no universal rule to judge wheteher it is correct or not. As indicated at the begining of this code, understanding the data will help you make the decision. For this exchange rate data, here, we will plot the rate values to check if there are abnormal values.\n",
+    "## After finding the non-number-strings, all the remaining values are number-strings and can easily be converted into a numeric datatype. But how can we know that the cells that contain number-strings are correct?\n",
+    "\n",
+    "For different data, there is no universal rule to judge \"correctness\". As indicated at the begining of this code, understanding the data will help you make the decision. For this exchange rate data, here, we will plot the rate values to check if there are seemingly abnormal values (i.e., *outliers*).\n",
+    "\n",
     "Let's first convert those number-strings to float "
    ]
   },
@@ -260,10 +285,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# or just have a quick look\n",
+    "leftdf"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now we can do the plot to check the values"
+    "### Now we can do some simple plots to check the values for outliers"
    ]
   },
   {
@@ -285,7 +320,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "According to the plot, you should find that most values are around 2 but between index 0 to 1000, there is a peak which is greater than 16. We can also use histogram plot to check this. "
+    "From the plot, you see that the vast majority of values are around 2, but between index 0 and 1000, there seem to be several values greater than 16. We can also use histogram plot to check this. "
    ]
   },
   {
@@ -316,8 +351,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now, we find all wrong values(non-number-strings and abnormal numbers). What should we do next?\n",
-    "### Replace them with other values OR just get rid of the wrong values\n",
+    "Since we know what this data represents (exchange rates for Australian dollars vs. the US dollar), we assume that these are data errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now, we've identified all of the incorrect values (non-number-strings and abnormal numbers). What should we do next?\n",
+    "\n",
+    "### Two options: Replace them with other values OR just get rid of the records with wrong values\n",
     "To deal with the wrong values, generally, you can choose either of the above methods. But there are some pros and cons for these two method:\n",
     "\n",
     "For Replaceing wrong values, you need to carefully decide what values you will put into the cells. without careful consideration, the cleaned data may have a negative influence on your future analysis.\n",
@@ -387,7 +430,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can find that the values are in a reasonable range, but the values are not consistent. \n",
+    "### We can find that the values are in a reasonable range, but the values are not necessarily consistent. \n",
     "We will provide another way to replace the wrong values with a dynamic value (imputed value)"
    ]
   },
@@ -492,12 +535,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "newcol = df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'][mask]\n",
+    "newcol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newcol"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -511,9 +573,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
