Updated for Fall '22 (again).

--- a/notebooks/Data Transformation Example.ipynb
+++ b/notebooks/Data Transformation Example.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# Data Transformation Example\n",
     "\n",
-    "Datafile: \"14_Foreign_Exchange_Rates_PureNumeric.csv\"\n",
+    "Datafile: \"14_Foreign_Exchange_Rates_PureNumeric.csv\" - A modified version with only numeric data.\n",
     "\n",
-    "2020-10-20 - Jingwei Liu"
+    "2020-10-20 - Jingwei Liu\n",
+    "<br>2022-10-16 - Jeff Smith"
    ]
   },
   {
@@ -44,6 +45,16 @@
    "source": [
     "# some statistics\n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Before applying the normalizations, let's look at Japan's raw data\n",
+    "df['JAPAN - YEN/US$'].describe()"
    ]
   },
   {
@@ -134,24 +145,48 @@
    "outputs": [],
    "source": [
     "# Apply Min-Max normolization to Australia, UK and Japan columns and check the stddev\n",
-    "ZScoreAUS = MinMax(df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'])\n",
-    "ZScoreUK = MinMax(df['UNITED KINGDOM - UNITED KINGDOM POUND/US$'])\n",
-    "ZScoreJP = MinMax(df['JAPAN - YEN/US$'])\n",
+    "MMAUS = MinMax(df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'])\n",
+    "MMUK = MinMax(df['UNITED KINGDOM - UNITED KINGDOM POUND/US$'])\n",
+    "MMJP = MinMax(df['JAPAN - YEN/US$'])\n",
     "# form new dataframe\n",
-    "newdf = pd.concat([ZScoreAUS, ZScoreUK, ZScoreJP], axis = 1)\n",
-    "newdf.describe()"
+    "MMdf = pd.concat([MMAUS, MMUK, MMJP], axis = 1)\n",
+    "MMdf.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can find that under the same range [0,1], Japan exchange rate is not more unstable."
+    "And we see that under the same range [0,1], Japan exchange rate is not more unstable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Apply Z-score normolization to Australia, UK and Japan columns and check the stddev\n",
+    "ZScoreAUS = ZScore(df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'])\n",
+    "ZScoreUK = ZScore(df['UNITED KINGDOM - UNITED KINGDOM POUND/US$'])\n",
+    "ZScoreJP = ZScore(df['JAPAN - YEN/US$'])\n",
+    "# form new dataframe\n",
+    "Zdf = pd.concat([ZScoreAUS, ZScoreUK, ZScoreJP], axis = 1)\n",
+    "Zdf.describe()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Of course the intent of Z-score normailization is to scale such that the mean 0 and the std dev is 1, so it's not a great comparison!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -171,7 +206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
