--- a/notebooks/Data Cleaning Example Using the Foreign Exchange Rate Data.ipynb
+++ b/notebooks/Data Cleaning Example Using the Foreign Exchange Rate Data.ipynb
@@ -405,8 +405,8 @@
    "source": [
     "# apply the function\n",
     "newcol = df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'].apply(lambda x: ReplaceWithConstantValue(x))\n",
-    "# check the data type\n",
-    "newcol[1].dtype"
+    "# check the resulting data\n",
+    "newcol"
    ]
   },
   {
@@ -430,7 +430,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### We can find that the values are in a reasonable range, but the values are not necessarily consistent. \n",
+    "### We see that the values are in a reasonable range, but the values are not necessarily consistent. \n",
+    "The inconsistency seems to be caused by replacing the ND values with a fixed value of 1.6.  Why does this seem inconsistent?  We have to understand the data to know that.\n",
+    "\n",
     "We will provide another way to replace the wrong values with a dynamic value (imputed value)"
    ]
   },
@@ -475,14 +477,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, the plot looks consistent and good. Next, we will show the getting rid of wrong values method."
+    "Now, the plot looks consistent with our expectations. Note that this doesn't necessarily make it \"correct.\"\n",
+    "\n",
+    "Next, we will show the getting rid of wrong values method."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Getting rid of the wrong values method"
+    "## Getting rid of the incorrect values\n",
+    "\n",
+    "Here, we'll start with the original dataset that has the non-numeric valuse (ND and ABC) and the outliers."
    ]
   },
   {
@@ -508,9 +514,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using a mask to filter those correct data\n",
     "mask = df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'].apply(lambda x: MaskCorrectValue(x))\n",
-    "df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'][mask]"
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "newcol2 = df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'][mask]\n",
+    "newcol2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Now we only have \"good\" values, but they're still strings\n",
+    "newcol2 = newcol2.apply(lambda x: float(x))\n",
+    "newcol2.describe()"
    ]
   },
   {
@@ -520,7 +546,7 @@
    "outputs": [],
    "source": [
     "# The original column.\n",
-    "df['AUSTRALIA - AUSTRALIAN DOLLAR/US$']"
+    "df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'].describe()"
    ]
   },
   {
@@ -536,17 +562,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "newcol = df['AUSTRALIA - AUSTRALIAN DOLLAR/US$'][mask]\n",
-    "newcol"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "newcol"
+    "# And looking at the new plot\n",
+    "plt.plot(newcol2)"
    ]
   },
   {
@@ -573,7 +590,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
